fixed issue with playagain button not showing

--- a/style.css
+++ b/style.css
@@ -119,10 +119,10 @@ body{
     border: solid 1px black;
     border-radius: 5px;
     color: var(--textColor);
+    display: block;
     font-size: 1.2rem;
     padding: 1rem 2rem;
-    position: relative;
-    top: 40%;
+    margin: 40% auto;
     cursor: pointer;
     z-index: 3;
 }
